Migratet authentification to next-provider. Authentification global in _app.tsx, with global storage listener. Manual trigger by creating storage event. Fixes flicker on enter page (header) because login state is already defined. Updated _document.tsx - fixes font-size and font-family bug on first enter page.

--- a/components/Timer/Timer.module.css
+++ b/components/Timer/Timer.module.css
@@ -4,6 +4,7 @@
   width: 100%;
   padding: 10px;
   font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+  font-weight: 400;
 }
 
 .header {
