--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
   color: var(--color-text-primary);
   background-color: var(--color-bg-primary);
   width: 100vw;
